--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,8 +1,10 @@
 * {
 	box-sizing: border-box;
 }
-html, body {
+html,
+body {
 	width: 100%;
 	height: 100%;
-	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	font-family:
+		"Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
